/// Unit tests for Presence Service handlers
///
/// Tests handler logic in isolation using mocks
/// These tests verify request validation, response construction,
/// and error handling without requiring real database/NATS connections

#[cfg(test)]
mod tests {
    use crate::db::UserPresence;
    use crate::nats::{PresenceEvent, TypingEvent};
    use crate::proto::presence::UserStatus;
    use chrono::Utc;
    use serde_json;

    // ============================================================
    // Test 1: Update Status Online
    // ============================================================
    
    #[test]
    fn test_update_status_online() {
        // Verify that setting status to ONLINE creates correct presence record
        let user_id = "user-test-001";
        let now = Utc::now().timestamp_millis();
        
        let presence = UserPresence {
            user_id: user_id.to_string(),
            status: UserStatus::Online as i32,
            custom_status_text: "".to_string(),
            last_seen: now,
            updated_at: now,
        };
        
        assert_eq!(presence.user_id, user_id);
        assert_eq!(presence.status, UserStatus::Online as i32);
        assert!(presence.last_seen > 0);
        assert_eq!(presence.last_seen, presence.updated_at);
        
        // Verify status value is 1 (ONLINE)
        assert_eq!(presence.status, 1);
    }

    // ============================================================
    // Test 2: Update Status Offline  
    // ============================================================
    
    #[test]
    fn test_update_status_offline() {
        // Verify that setting status to OFFLINE creates correct presence record
        let user_id = "user-test-002";
        let now = Utc::now().timestamp_millis();
        
        let presence = UserPresence {
            user_id: user_id.to_string(),
            status: UserStatus::Offline as i32,
            custom_status_text: "".to_string(),
            last_seen: now,
            updated_at: now,
        };
        
        assert_eq!(presence.status, UserStatus::Offline as i32);
        
        // Verify status value is 0 (OFFLINE)
        assert_eq!(presence.status, 0);
    }

    // ============================================================
    // Test 3: Update Status Away
    // ============================================================
    
    #[test]
    fn test_update_status_away() {
        // Verify that setting status to AWAY creates correct presence record
        let user_id = "user-test-003";
        let now = Utc::now().timestamp_millis();
        let custom_status = "Taking a break â˜•";
        
        let presence = UserPresence {
            user_id: user_id.to_string(),
            status: UserStatus::Away as i32,
            custom_status_text: custom_status.to_string(),
            last_seen: now,
            updated_at: now,
        };
        
        assert_eq!(presence.status, UserStatus::Away as i32);
        assert_eq!(presence.custom_status_text, custom_status);
        
        // Verify status value is 2 (AWAY)
        assert_eq!(presence.status, 2);
    }

    // ============================================================
    // Test 4: Typing Indicator Start
    // ============================================================
    
    #[test]
    fn test_typing_indicator_start() {
        // Verify typing indicator creation when user starts typing
        let user_id = "user-typing-001";
        let conversation_user_id = "user-recipient-001";
        let now = Utc::now().timestamp_millis();
        
        let typing_event = TypingEvent {
            user_id: user_id.to_string(),
            conversation_user_id: conversation_user_id.to_string(),
            is_typing: true,
            timestamp: now,
        };
        
        assert_eq!(typing_event.user_id, user_id);
        assert_eq!(typing_event.conversation_user_id, conversation_user_id);
        assert!(typing_event.is_typing);
        assert!(typing_event.timestamp > 0);
        
        // Verify JSON serialization
        let json = serde_json::to_string(&typing_event).unwrap();
        assert!(json.contains("\"is_typing\":true"));
        assert!(json.contains(user_id));
        assert!(json.contains(conversation_user_id));
    }

    // ============================================================
    // Test 5: Typing Indicator Stop
    // ============================================================
    
    #[test]
    fn test_typing_indicator_stop() {
        // Verify typing indicator when user stops typing
        let user_id = "user-typing-002";
        let conversation_user_id = "user-recipient-002";
        let now = Utc::now().timestamp_millis();
        
        let typing_event = TypingEvent {
            user_id: user_id.to_string(),
            conversation_user_id: conversation_user_id.to_string(),
            is_typing: false,
            timestamp: now,
        };
        
        assert!(!typing_event.is_typing);
        
        // Verify JSON serialization
        let json = serde_json::to_string(&typing_event).unwrap();
        assert!(json.contains("\"is_typing\":false"));
    }

    // ============================================================
    // Test 6: Typing Auto Expire Logic
    // ============================================================
    
    #[test]
    fn test_typing_auto_expire() {
        // Verify typing indicator expiration logic (10 second timeout)
        let now = Utc::now().timestamp_millis();
        const TYPING_TIMEOUT_MS: i64 = 10_000; // 10 seconds
        
        // Fresh typing indicator (1 second ago) - should NOT be expired
        let fresh_timestamp = now - 1_000;
        let is_fresh_expired = now - fresh_timestamp > TYPING_TIMEOUT_MS;
        assert!(!is_fresh_expired, "Fresh typing indicator should not be expired");
        
        // 5 seconds old - should NOT be expired
        let mid_timestamp = now - 5_000;
        let is_mid_expired = now - mid_timestamp > TYPING_TIMEOUT_MS;
        assert!(!is_mid_expired, "5 second old typing should not be expired");
        
        // Exactly 10 seconds - should NOT be expired (boundary)
        let boundary_timestamp = now - 10_000;
        let is_boundary_expired = now - boundary_timestamp > TYPING_TIMEOUT_MS;
        assert!(!is_boundary_expired, "Exactly 10 second old typing should not be expired");
        
        // 11 seconds old - SHOULD be expired
        let stale_timestamp = now - 11_000;
        let is_stale_expired = now - stale_timestamp > TYPING_TIMEOUT_MS;
        assert!(is_stale_expired, "11 second old typing should be expired");
        
        // 15 seconds old - SHOULD be expired
        let very_stale_timestamp = now - 15_000;
        let is_very_stale_expired = now - very_stale_timestamp > TYPING_TIMEOUT_MS;
        assert!(is_very_stale_expired, "15 second old typing should be expired");
    }

    // ============================================================
    // Test 7: Last Seen Persistence
    // ============================================================
    
    #[test]
    fn test_last_seen_persistence() {
        // Verify last_seen timestamp is correctly updated
        let user_id = "user-lastseen-001";
        let initial_time = Utc::now().timestamp_millis();
        
        // Create initial presence
        let mut presence = UserPresence {
            user_id: user_id.to_string(),
            status: UserStatus::Online as i32,
            custom_status_text: "".to_string(),
            last_seen: initial_time,
            updated_at: initial_time,
        };
        
        assert_eq!(presence.last_seen, initial_time);
        
        // Simulate time passing and heartbeat update
        let updated_time = initial_time + 30_000; // 30 seconds later
        presence.last_seen = updated_time;
        presence.updated_at = updated_time;
        
        assert_eq!(presence.last_seen, updated_time);
        assert_eq!(presence.updated_at, updated_time);
        assert!(presence.last_seen > initial_time);
        
        // Verify JSON round-trip preserves timestamps
        let json = serde_json::to_string(&presence).unwrap();
        let deserialized: UserPresence = serde_json::from_str(&json).unwrap();
        assert_eq!(deserialized.last_seen, updated_time);
        assert_eq!(deserialized.updated_at, updated_time);
    }

    // ============================================================
    // Additional Handler Tests
    // ============================================================

    #[test]
    fn test_presence_event_creation() {
        // Verify PresenceEvent is correctly constructed for NATS publishing
        let user_id = "user-event-001";
        let now = Utc::now().timestamp_millis();
        
        let event = PresenceEvent {
            user_id: user_id.to_string(),
            status: UserStatus::Online as i32,
            custom_status_text: "Available for chat".to_string(),
            last_seen: now,
            updated_at: now,
        };
        
        // Verify JSON serialization for NATS
        let json = serde_json::to_string(&event).unwrap();
        assert!(json.contains(user_id));
        assert!(json.contains("Available for chat"));
        
        // Verify deserialization
        let deserialized: PresenceEvent = serde_json::from_str(&json).unwrap();
        assert_eq!(deserialized.user_id, user_id);
        assert_eq!(deserialized.status, UserStatus::Online as i32);
    }

    #[test]
    fn test_custom_status_text_validation() {
        // Handler validates custom_status_text max length (100 chars)
        const MAX_CUSTOM_STATUS_LEN: usize = 100;
        
        // Valid: empty string
        let empty = "";
        assert!(empty.len() <= MAX_CUSTOM_STATUS_LEN);
        
        // Valid: normal text
        let normal = "Working on project";
        assert!(normal.len() <= MAX_CUSTOM_STATUS_LEN);
        
        // Valid: exactly 100 characters
        let exact = "a".repeat(100);
        assert!(exact.len() <= MAX_CUSTOM_STATUS_LEN);
        assert_eq!(exact.len(), MAX_CUSTOM_STATUS_LEN);
        
        // Invalid: 101 characters
        let too_long = "a".repeat(101);
        assert!(too_long.len() > MAX_CUSTOM_STATUS_LEN);
        
        // Valid: Unicode text (emoji counts as multiple bytes but single char)
        let unicode = "ðŸŽ‰ Celebrating milestone! ðŸš€";
        assert!(unicode.len() <= MAX_CUSTOM_STATUS_LEN);
    }

    #[test]
    fn test_all_user_statuses() {
        // Verify all UserStatus enum values are handled correctly
        let statuses = vec![
            (UserStatus::Offline, 0),
            (UserStatus::Online, 1),
            (UserStatus::Away, 2),
            (UserStatus::DoNotDisturb, 3),
            (UserStatus::Invisible, 4),
        ];
        
        for (status, expected_value) in statuses {
            let presence = UserPresence {
                user_id: "test".to_string(),
                status: status as i32,
                custom_status_text: "".to_string(),
                last_seen: 0,
                updated_at: 0,
            };
            
            assert_eq!(
                presence.status, expected_value,
                "Status {:?} should have value {}", status, expected_value
            );
        }
    }

    #[test]
    fn test_typing_cannot_send_to_self() {
        // Handler should reject typing indicators sent to oneself
        let user_id = "user-self-001";
        let conversation_user_id = "user-self-001"; // Same as user_id
        
        // This validation happens in handler, we verify the condition
        let is_self_typing = user_id == conversation_user_id;
        assert!(is_self_typing, "Should detect self-typing attempt");
    }

    #[test]
    fn test_typing_requires_conversation_user_id() {
        // Handler should reject empty conversation_user_id
        let conversation_user_id = "";
        let is_empty = conversation_user_id.is_empty();
        assert!(is_empty, "Should detect empty conversation_user_id");
    }

    #[test]
    fn test_presence_key_format() {
        // Verify TiKV key format for presence storage
        let user_id = "user-key-001";
        let key = format!("/presence/{}", user_id);
        
        assert_eq!(key, "/presence/user-key-001");
        assert!(key.starts_with("/presence/"));
    }

    #[test]
    fn test_typing_key_format() {
        // Verify TiKV key format for typing indicator storage
        let user_id = "user-a";
        let conversation_user_id = "user-b";
        let key = format!("/typing/{}/{}", user_id, conversation_user_id);
        
        assert_eq!(key, "/typing/user-a/user-b");
        assert!(key.starts_with("/typing/"));
    }
}
